--- a/Portfolio Website/templates/index.html
+++ b/Portfolio Website/templates/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riccardo Zanutta</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Kingsley Okpala</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/styles.css') }}">
 </head>
 <body>
     <header>
-        <h1>Riccardo Zanutta</h1>
+        <h1>Kingsley Okpala</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
